[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-nbgrader"
version = "0.0.5"
dependencies = [
    "aiohttp==3.8.5",
    "canvasapi==3.2.0",
    "fqdn==1.5.1",
    "isoduration==20.11.0",
    "jsonpointer==2.3",
    "jupyter==1.0.0",
    "jupyter-server-terminals==0.4.4",
    "nbgrader==0.8.4",
    "overrides==7.3.1",
    "pandas==2.0.2",
    "python-dotenv==1.0.0",
    "rich==13.4.2",
    "testpath==0.6.0",
    "uri-template==1.2.0",
    "webcolors==1.13",
]
